--- a/style.css
+++ b/style.css
@@ -176,7 +176,7 @@ figure{
     height: 100%;
 }
 #fixed{
-    background-image: url('img/fixed.jpg');
+    background-image: url('img/teamfixed.jpg');
     position: fixed;
     display: block;
     top: 0;
